Enable facets, export config

--- a/config/default/language/fr/views.view.media_library.yml
+++ b/config/default/language/fr/views.view.media_library.yml
@@ -64,6 +64,7 @@ display:
             alt: 'Supprimer {{ name }}'
           text: Supprimer
   widget:
+    display_title: Widget
     display_options:
       arguments:
         bundle:
