--- a/config/default/language/fr/views.view.watchdog.yml
+++ b/config/default/language/fr/views.view.watchdog.yml
@@ -9,6 +9,10 @@ display:
           admin_label: Icône
         severity:
           label: Importance
+        type:
+          label: Type
+        timestamp:
+          label: Date
         name:
           label: Utilisateur
         link:
@@ -29,6 +33,9 @@ display:
           admin_label: "Aucune entrée du journal n'est disponible."
           content: "Aucune entrée du journal n'est disponible."
       filters:
+        type:
+          expose:
+            label: Type
         severity:
           expose:
             label: Importance
