--- a/config/default/language/es/webform.settings.yml
+++ b/config/default/language/es/webform.settings.yml
@@ -2,6 +2,7 @@ settings:
   default_submit_button_label: Enviar
   default_reset_button_label: Restablecer
   default_delete_button_label: Eliminar
+  default_wizard_toggle_show_label: 'Mostrar todo'
   default_preview_next_button_label: 'Vista previa'
   default_preview_label: 'Vista previa'
   dialog_options:
