--- a/config/default/language/ru/webform.settings.yml
+++ b/config/default/language/ru/webform.settings.yml
@@ -2,6 +2,7 @@ settings:
   default_submit_button_label: Отправить
   default_reset_button_label: Сбросить
   default_delete_button_label: Удалить
+  default_wizard_toggle_show_label: 'Показать все'
   default_preview_next_button_label: Предпросмотр
   default_preview_label: Предпросмотр
   dialog_options:
