refs#30610 update core to 10.4.7

--- a/config/default/language/fr/autologout.settings.yml
+++ b/config/default/language/fr/autologout.settings.yml
@@ -1,1 +1,2 @@
+message: 'Nous sommes sur le point de vous déconnecter, du fait de votre inactivité. Dans ce cas, vous perdriez tout travail non sauvegardé. Avez-vous besoin de plus de temps ?'
 inactivity_message: "Vous avez été déconnecté pour cause d'inactivité."
