--- a/config/default/language/es/views.view.files.yml
+++ b/config/default/language/es/views.view.files.yml
@@ -28,6 +28,7 @@ display:
           label: 'Usado en'
           alter:
             path: 'admin/content/files/usage/{{ fid }}'
+          format_plural_string: !!binary QGNvdW50IGx1Z2FyA0Bjb3VudCBsdWdhcmVz
       pager:
         options:
           tags:
