--- a/config/default/language/fr/views.view.watchdog.yml
+++ b/config/default/language/fr/views.view.watchdog.yml
@@ -8,6 +8,8 @@ display:
       fields:
         nothing:
           admin_label: Icône
+        wid:
+          label: WID
         severity:
           label: Importance
         type:
