--- a/config/default/language/ru/views.view.watchdog.yml
+++ b/config/default/language/ru/views.view.watchdog.yml
@@ -8,6 +8,8 @@ display:
       fields:
         nothing:
           admin_label: Иконка
+        wid:
+          label: WID
         severity:
           label: Важность
         type:
